DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 1.1.7
Aug-04-2006 dshipton    Use flagpoll for building against sonix instead of
                        sonix-config.
                        NEW VERSION: 1.1.6
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the Sonix library.
                        NEW VERSION: 1.1.5
Jun-25-2006 patrick     Added support for building universal binaries on Mac
                        OS X.
                        NEW VERSION: 1.1.4
May-24-2006 dshipton    Libraries and plugins fully versioned for parallel
                        installations.
                        NEW VERSION: 1.1.3
Aug-17-2005 patrickh    Removed the unused namespace snx::FileIO and all its
                        members.
                        NEW VERSION: 1.1.2
Jul-11-2005 patrickh    Updated to VPR 1.1.3.
Jul-10-2005 patrickh    Updated to VPR 1.1.2.
Jun-09-2005 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 1.1.1
Jun-07-2005 patrickh    VR Juggler 2.0 branch created.
                        NEW VERSION: 1.1.0