@@ -1,3 +1,4 @@
+1.1.8-0 @01/30/2007 22:30:00 UTC@
 1.1.7-0 @10/01/2006 21:50:00 UTC@
 1.1.6-0 @08/04/2006 14:25:00 UTC@
 1.1.5-0 @07/12/2006 14:35:00 UTC@
